# xorg__lib__libXCalibrate

./: Makefile.am  README  configure.ac  xcalibrate.c  xcalibrate.h  xcalibrate.pc.in
